<resources>
    <string name="app_name">GupShup</string>
    <string name="user_name">User Name</string>
    <string name="already_have_account">Already have account</string>
    <string name="pasward">Pasward</string>
    <string name="email_adress">Email Adress</string>
    <string name="todo">TODO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="button">Button</string>
    <string name="or_sign_up_with">or Sign up with</string>
    <string name="google">Google</string>
    <string name="phone_number">Phone Number</string>

    <string name="facebook_app_id">755368369122701</string>
    <string name="fb_login_protocol_scheme">fb755368369122701</string>
    <string name="facebook_client_token">56789</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="hint">###-#########</string>
    <string name="please_type_your_phone_number">Please type your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="title_activity_manage_otp">ManageOTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>