<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#EBF7DB2E"
    android:gravity="center"
    app:circularflow_defaultRadius="30dp"
    tools:context=".SignUpSignIn.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <androidx.cardview.widget.CardView
            android:id="@+id/picture"
            android:layout_width="123dp"
            android:layout_height="121dp"
            android:background="@drawable/applogo"
            android:baselineAligned="false"
            android:elevation="12dp"
            app:cardCornerRadius="80dp">

            <ImageView
                android:id="@+id/ivapplogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="41dp"
                android:layout_height="38dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/cameraimage"
                tools:ignore="RtlHardcoded" />


        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/etUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="#040101"
            android:textColorHint="#7A050505"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etEmails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/email_adress"
            android:inputType="text"
            android:textColor="#040101"
            android:textColorHint="#7A050505"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="true"
            android:hint="@string/pasward"
            android:inputType="textPassword"
            android:textColor="#040101"
            android:textColorHint="#7A050505"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/already_have_account"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFC107"
            android:text="@string/sign_up"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/or_sign_up_with"
            android:textColor="#0B0B0B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGooglr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttongoogle"
                android:drawableStart="@drawable/googlee"
                android:text="@string/google"
                android:textColor="#0277BD"
                app:cornerRadius="5dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnFacebooks"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/facebookbg"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="4dp"
                android:drawingCacheQuality="auto"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                app:cornerRadius="5dp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#6D4C41"
            tools:text="or with" />

        <TextView
            android:id="@+id/tvMobileNumber"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="right|center_vertical"
            android:text="@string/phone_number"
            android:textColor="#0277BD"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_contact_phone_24" />


    </LinearLayout>

</LinearLayout>