<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#EBF7DB2E"
    android:gravity="center"
    android:orientation="vertical"
    app:circularflow_defaultRadius="30dp"
    tools:context=".SignUpSignIn.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/email_adress"
            android:inputType="text"
            android:textColor="#040101"
            android:textColorHint="#7A050505"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etPassward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="true"
            android:hint="@string/pasward"
            android:textColor="#040101"
            android:textColorHint="#7A050505"
            android:textColorLink="#000000"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvCreateHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:minHeight="48dp"
            android:text="create new account"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFC107"
            android:text="Sign In"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="or sign in with"
            android:textColor="#0B0B0B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttongoogle"
                android:drawableStart="@drawable/googlee"
                android:text="@string/google"
                android:textColor="#0277BD"
                app:cornerRadius="5dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnFacebook"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/facebookbg"
                android:drawableLeft="@drawable/facebook"
                android:drawablePadding="4dp"
                android:drawingCacheQuality="auto"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:text="Facebook"
                android:textColor="#FFFFFF"
                app:cornerRadius="5dp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#6D4C41"
            tools:text="or with" />

        <TextView
            android:id="@+id/tvMobileNumber"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="right|center_vertical"
            android:text="Phone Number"
            android:textColor="#0277BD"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_contact_phone_24" />


    </LinearLayout>

</LinearLayout>